--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "axios": "^1.8.4",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "sass": "^1.86.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
